<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECF3AB"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="#C52222"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textColor="#162680"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:textColor="#27134A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/phone"
            android:textColor="#162680"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textColor="#27134A"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/gender"
            android:textColor="#162680"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/male_female"
            android:inputType="textPersonName"
            android:textColor="#27134A"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save"
                style="@android:style/Widget.Button"
                android:layout_width="180sp"
                android:layout_height="60sp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="#AC0909"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#28CCE1" />

            <Button
                android:id="@+id/delete"
                style="@android:style/Widget.Button"
                android:layout_width="180sp"
                android:layout_height="60sp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="#B81111"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="#28CCE1" />
        </LinearLayout>

        <Button
            android:id="@+id/read"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginTop="40dp"
            android:text="@string/read"
            android:textColor="#E8ECED"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#BF6AED" />

        <Button
            android:id="@+id/clear"
            style="@android:style/Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/clear"
            android:textColor="#F3EFEF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#BF6AED" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>